исправлены ошибки, возникающие в авторизации